Implemented Inventory and added TradeWindow Functionality